# kallisto2matrix

./: Cargo.toml  ReadMe.md  kallisto2matrix  work.sh
example/: salmon_count_matrix.txt  sample.txt  samples.txt  samples_salmon.txt  test_est_counts_matrix.txt  tkn_count_matrix.txt  tkn_fpkm_matrix.txt  tkn_tpm_matrix.txt
example/BB313-01T0001_sfs/: abundance.h5  h5view.py  run_info.json
example/BB313-01T0002_sfs/: abundance.h5  run_info.json
example/CRR812470_output/: abundance.h5  abundance.tsv  run_info.json
example/CRR812471_output/: abundance.h5  abundance.tsv  run_info.json
example/SRR22937051_sfs/: cmd_info.json  lib_format_counts.json
example/SRR22937051_sfs/aux_info/: ambig_info.tsv  meta_info.json
example/SRR22937051_sfs/libParams/: flenDist.txt
example/SRR22937052_sfs/: cmd_info.json  lib_format_counts.json
example/SRR22937052_sfs/aux_info/: ambig_info.tsv  meta_info.json
example/SRR22937052_sfs/libParams/: flenDist.txt
src/: arg.rs  main.rs
