[package]
name = "kallisto2matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-v3 = "3.0.0-beta.1"
ansi_term = "*"
csv = "1.2.1"

[profile.release]
lto = true
# opt-level = 'z'
# codegen-units = 1
