[package]
name = "kallisto2matrix"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ansi_term = "*"
csv = "1.2.1"

[profile.release]
lto = true
# opt-level = 'z'
# codegen-units = 1
